Update frontend templates and assets

--- a/templates/dashboard_new.html
+++ b/templates/dashboard_new.html
@@ -192,7 +192,7 @@
 </head>
 <body>
     {% include 'partials/navbar.html' %}
-    {% include 'partials/sidebar.html' %}
+    {% include 'partials/sidebar_modern.html' %}
 
     <div class="main-content-with-sidebar">
         <div class="dashboard-header">
