--- a/templates/device_config.html
+++ b/templates/device_config.html
@@ -12,7 +12,7 @@
     {% include 'partials/navbar.html' %}
     <div class="container-fluid p-0">
         <div class="row g-0">
-            {% include 'partials/sidebar.html' %}
+            {% include 'partials/sidebar_modern.html' %}
             <main class="col-md-10 ms-sm-auto col-lg-10 px-4 main-content">
                 <div class="d-flex justify-content-between align-items-center pt-3 pb-2 mb-3 border-bottom">
                     <h1 class="h2 text-white"><i class="fas fa-cog me-2"></i>Device Configuration - {{ camera.name }}</h1>
