--- a/templates/live_view_improved.html
+++ b/templates/live_view_improved.html
@@ -197,7 +197,7 @@
     
     <div class="container-fluid p-0">
         <div class="row g-0">
-            {% include 'partials/sidebar.html' %}
+            {% include 'partials/sidebar_modern.html' %}
             
             <main class="col-md-10 ms-sm-auto col-lg-10 px-md-4 main-content">
                 <!-- Header -->
