--- a/templates/scan_improved.html
+++ b/templates/scan_improved.html
@@ -326,7 +326,7 @@
 </head>
 <body>
     {% include 'partials/navbar.html' %}
-    {% include 'partials/sidebar.html' %}
+    {% include 'partials/sidebar_modern.html' %}
 
     <div class="main-content-with-sidebar">
         <div class="scan-header">
