--- a/templates/settings.html
+++ b/templates/settings.html
@@ -228,7 +228,7 @@
 </head>
 <body>
     {% include 'partials/navbar.html' %}
-    {% include 'partials/sidebar.html' %}
+    {% include 'partials/sidebar_modern.html' %}
 
     <div class="main-content-with-sidebar">
         <div class="settings-header">
