--- a/templates/video_wall.html
+++ b/templates/video_wall.html
@@ -28,7 +28,7 @@
     
     <div class="container-fluid p-0">
         <div class="row g-0">
-            {% include 'partials/sidebar.html' %}
+            {% include 'partials/sidebar_modern.html' %}
             
             <main class="col-md-10 ms-sm-auto col-lg-10 px-4 main-content">
                 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
